<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profile_image_layout"
            android:layout_width="@dimen/dimen_45dp"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_margin="@dimen/dimen_32dp"
            android:background="@drawable/grey_background"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_avatar_image_view"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:padding="@dimen/dimen_5dp"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:srcCompat="@mipmap/ic_launcher"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/dimen_3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dimen_45dp"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_margin="@dimen/dimen_32dp"
            android:background="@drawable/grey_stroke_background"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_layout">

            <TextView
                android:id="@+id/amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_amount_str"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_5dp"
                android:text="@string/currency_usd_str"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/amount_percent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_6dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_layout">

            <TextView
                android:id="@+id/amount_with_currency_symbol_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_amount_with_dollar_str"
                android:textColor="@color/light_green"
                android:textSize="@dimen/dimen_12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percent_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_5dp"
                android:text="@string/dummy_percentage_str"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_chart_area_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="@color/ghost_gray"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_percent_layout">

            <LinearLayout
                android:id="@+id/cryptocurrency_card_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:background="@drawable/white_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:src="@drawable/cryptocurrency" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/cryptocurrency_card_layout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_btc_str"
                    android:textColor="@color/secondary_brown"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_32_percent_str"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/dimen_10sp" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/btc_line_chart"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/change_button"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:text="@string/change_str"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/dimen_10sp"
                app:strokeColor="@color/secondary_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/period_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16dp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_chart_area_layout">

            <TextView
                android:id="@+id/twenty_four_hour_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".15"
                android:paddingStart="@dimen/dimen_8dp"
                android:text="@string/twenty_four_hour"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/one_week_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/one_week"
                android:textColor="@color/eth_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/one_month_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/one_month"
                android:textColor="@color/eth_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/one_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/one_year"
                android:textColor="@color/eth_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/all_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".15"
                android:text="@string/all"
                android:textColor="@color/eth_black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/setting_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:src="@drawable/setting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_chart_area_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/period_layout">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/main_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />


            <com.github.mikephil.charting.charts.CandleStickChart
                android:id="@+id/main_candle_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_area_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middle_chart_area_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sell_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_brown"
                android:paddingHorizontal="@dimen/dimen_48dp"
                android:paddingVertical="@dimen/dimen_12dp"
                android:text="@string/sell_str"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                app:cornerRadius="@dimen/dimen_10dp" />

            <View
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:elevation="@dimen/dimen_50dp"
                android:paddingHorizontal="@dimen/dimen_48dp"
                android:paddingVertical="@dimen/dimen_12dp"
                android:text="@string/buy_str"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/dimen_10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/about_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/about_str"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_area_layout" />

        <TextView
            android:id="@+id/about_content_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:lineHeight="@dimen/dimen_24dp"
            android:text="@string/dummy_str"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/about_text_view"
            app:layout_constraintTop_toBottomOf="@id/about_text_view" />

        <TextView
            android:id="@+id/market_stats_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/market_stats_str"
            app:layout_constraintStart_toStartOf="@id/about_content_text_view"
            app:layout_constraintTop_toBottomOf="@id/about_content_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/market_stats_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/market_stats_text_view"
            tools:listitem="@layout/market_stat_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>