<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ghost_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/cryptocurrency_card_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:background="@drawable/white_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/currency_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cryptocurrency"
            android:layout_margin="@dimen/dimen_16dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/cryptocurrency_card_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/currency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_btc_str"
            android:textColor="@color/secondary_brown"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currency_percentage_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_32_percent_str"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/dimen_10sp" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currency_amount_text_view"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currency_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:text="@string/dummy_amount_with_dollar_str"
        android:textColor="@color/secondary_black"
        android:textSize="@dimen/dimen_10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/currency_rate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:text="@string/dummy_2_73_btc"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/dimen_10sp"
        app:layout_constraintEnd_toEndOf="@+id/currency_amount_text_view"
        app:layout_constraintTop_toBottomOf="@+id/currency_amount_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>